Fixing problems with showing/hiding Mac plugins. Specifically, these problems: * Mouse events "bleeding through" tabs so that a plugin in one tab responds to mouse movements in another (bug 120875) * dynamic control of CSS visiblity property with plugins on mac (can hide/show plugins) (bug 137230) * Plugins incorrectly show up on top of documents and in the wrong place in print preview. This fix will also them to be hidden like they are on other platforms. (bug 133992) r=av sr=beard